--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "lint": "eslint",
     "execLint": "eslint .",
-    "start": "nodemon app.js",
+    "start": "nodemon app_0.js",
+    "app1":"nodemon app_1.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
