--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "lint": "eslint",
     "execLint": "eslint .",
     "start": "nodemon app_0.js",
-    "app1":"nodemon app_1.js",
+    "app1": "nodemon app_1.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -19,13 +19,16 @@
   "author": "Saleem",
   "license": "ISC",
   "dependencies": {
+    "concurrently": "^4.1.0",
     "express": "^4.16.4",
+    "mongodb": "^3.1.13",
     "nodemon": "^1.18.9"
   },
   "devDependencies": {
     "eslint": "^5.12.1",
     "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-plugin-import": "^2.15.0"
+    "eslint-plugin-import": "^2.15.0",
+    "json-server": "^0.14.2"
   },
   "nodemonConfig": {
     "restartable": "rs",
